[metadata]
name = movie-cat-providers
version = 0.0.0
author = Ciarán
description = Providers used by movie-cat.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/movie-cat/providers/tree/main
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    httpx==0.27.0
    pycryptodomex==3.20.0
    pythonmonkey==0.8.0
    tenacity==9.0.0
    rich==13.7.1
    click==8.1.7
python_requires = >=3.6

[options.entry_points]
console_scripts =
    mcat-providers = mcat_providers.__init__:main